--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0",
     "handlebars-layouts": "^3.1.4",
